# demoapp

./: .gitignore  .travis.yml  README.md  README.rst  pyproject.toml  setup.cfg
demoapp/cmd/: __init__.py
tests/: test_demo.py
