[metadata]
name = demoapp
author = Felix Pan
author_email = tinylambda@gmail.com
description = demo app
long_description = file: README.rst
url = https://github.com/tinylambda/demoapp
license = MIT
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >= 3.7
setup_requires =
    pbr>=1.9
install_requires =
    django==3.2.4
    channels==3.0.3
    channels-redis==3.2.0

[options.entry_points]
console_scripts =
    demo_cmd = demoapp.cmd:demo_cmd
